# hpiinfo

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build_debs.sh.in  configure.ac  hpiinfo.spec.in
debian/: Makefile.am  changelog.src  control  copyright  rules
docs/: Makefile.am  hpiinfo_cmd.xml
icons/: Makefile.am  hpiinfo-16x16.xpm
src/: Makefile.am  change_mode.cpp  change_mode.h  cmdswitch.cpp  hpiinfo.cpp  hpiinfo.h  virtdetails.cpp
src/hpiinfo/: Makefile.am  change_mode.cpp  cmdswitch.cpp  hpiinfo.cpp  hpiinfo.h  virtdetails.cpp  virtdetails.h
src/hpiinfo_cmd/: Makefile.am  hpiinfo_cmd.cpp  hpiinfo_cmd.h
xdg/: Makefile.am  hpiinfo-root-consolehelper  hpiinfo-sudo.desktop  hpiinfo.desktop  install_usermode.sh.in
